<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Debtors</string>
    <string name="debtors">Debtors</string>
    <string name="debtors_list">Debtors list</string>
    <string name="lend">Lend</string>
    <string name="payoff">Payoff</string>
    <string name="history">History</string>
    <string name="exit">Exit</string>
    <string name="debtor">Debtor</string>
    <string name="loan">Loan</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="set_time">Set time</string>
    <string name="set_date">Set date</string>
    <string name="edit_debtor">Edit debtor</string>
    <string name="delete_debtor">Delete debtor</string>
    <string name="debtor_list">Debtors list</string>
    <string name="title_activity_debtor_history">History of %s</string>
    <string name="edit_entry">Edit entry</string>
    <string name="delete_entry">Delete entry</string>
    <string name="entry">Entry</string>
    <string name="value">Value</string>
    <string name="desc">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_value">Invalid value</string>
    <string name="invalid_value_desc">Put correct value (eg. 15.40)</string>
    <string name="delete">Delete</string>
    <string name="entry_deletion">Delete entry</string>
    <string name="delete_entry_confirmation">Are you sure you want to delete this entry?</string>
    <string name="debtor_deletion">Delete debtor</string>
    <string name="delete_debtor_confirmation">Are you sure you want to delete debtor %s?</string>
    <string name="title_activity_edit_debtor">Debtor edit</string>
    <string name="name">Name</string>
    <string name="hidden">Hidden</string>
    <string name="person">Person</string>
    <string name="settings">Settings</string>
    <string name="export_import_data">Export/Import data</string>
    <string name="export_data">Export data</string>
    <string name="import_data">Import data</string>
    <string name="choose_db_file">Choose db backup file</string>
    <string name="exported">Data exported to %s</string>
    <string name="imported">Data imported</string>
    <string name="external_not_avail">External storage is not available</string>
    <string name="unable_export">Unable to export</string>
    <string name="unable_import">Unable to import</string>
    <string name="no_files">No backup files</string>
    <string name="enter_desc">Enter description or left empty</string>
    <string name="currency">Currency</string>
    <string name="default_currency">USD</string>
    <string name="show_desc_dialog_on">Show description dialog when adding new transaction</string>
    <string name="show_desc_dialog_off">Don\'t show description dialog when adding new transaction</string>
    <string name="show_desc_dialog">Description dialog</string>
    <string name="action_settings">Settings</string>
    <string name="show_on_map">Show on map</string>
    <string name="use_location">Use location</string>
    <string name="use_location_on">Location will be stored</string>
    <string name="use_location_off">Location won\'t be used</string>
    <string name="require_valid_location">Require real location</string>
    <string name="require_valid_location_on">Allow real location only</string>
    <string name="require_valid_location_off">Allow using last location info</string>
    <string name="title_activity_entry_map">Location</string>
    <string name="has_location_status">% real location</string>
    <string name="waiting_for_location_status">waiting for real location...</string>
    <string name="using_last_location_status">% using last location</string>

</resources>