<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <ListPreference
        android:defaultValue="@string/default_currency"
        android:entries="@array/currency_list"
        android:entryValues="@array/currency_list"
        android:key="pref_currency"
        android:title="@string/currency" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="pref_showDescDialog"
        android:summaryOff="@string/show_desc_dialog_off"
        android:summaryOn="@string/show_desc_dialog_on"
        android:title="@string/show_desc_dialog" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_useLocation"
        android:summaryOff="@string/use_location_off"
        android:summaryOn="@string/use_location_on"
        android:title="@string/use_location" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:dependency="pref_useLocation"
        android:summaryOff="@string/require_valid_location_off"
        android:summaryOn="@string/require_valid_location_on"
        android:title="@string/require_valid_location"
        android:key="pref_requireValidLocation" />

</PreferenceScreen>